--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
                 "input": "./node_modules/bootstrap/dist/css/bootstrap.css"
               }
             ],
-            "scripts": [],
+            "scripts": [
+              "../node_modules/jquery/dist/jquery.min.js",
+              "../node_modules/typed.js/lib/typed.min.js"
+            ],
             "es5BrowserSupport": true
           },
           "configurations": {
